--- a/playtest.yml
+++ b/playtest.yml
@@ -2,6 +2,9 @@
 - name: Test Playbook
   hosts: localhost
   
+  vars:
+    ansible_python_interpreter = /usr/bin/python3
+  
   vars_files:
   - lookupdate.yml
   
