--- a/playtest.yml
+++ b/playtest.yml
@@ -3,7 +3,7 @@
   hosts: localhost
   
   vars:
-    ansible_python_interpreter = /usr/bin/python3
+    ansible_python_interpreter: /usr/bin/python3
   
   vars_files:
   - lookupdate.yml
