--- a/lookupdate.yml
+++ b/lookupdate.yml
@@ -1,3 +1,3 @@
 ---
 # Change the YYYY-MM-DD below to trigger Jenkins automation!
-lookupdate: "2020-06-55"
+lookupdate: "it always works after you take a break!"
